--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -115,6 +115,17 @@ releases:
           secret:
             {{ $registry_authorization_header | quote | nindent 14 }}
 
+{{- $registry_notification_secret := $gkms_omnibus_secrets | exec "jq" (list "-jc" "[.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".registry_notification_secret]") }}
+
+      - apiVersion: v1
+        kind: Secret
+        metadata:
+          name: gitlab-registry-notification-v1
+          namespace: {{ $namespace }}
+        stringData:
+          secret:
+            {{ $registry_notification_secret | quote | nindent 14 }}
+
       - apiVersion: v1
         kind: Secret
         metadata:
