--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -7,5 +7,6 @@ helmfiles:
   - path: releases/gitlab-secrets/helmfile.yaml
   - path: releases/gitlab-extras/helmfile.yaml
   - path: releases/gitlab/helmfile.yaml
+  - path: releases/gitlab-runner/helmfile.yaml
 
 missingFileHandler: Error
