--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -254,7 +254,6 @@ releases:
           namespace: {{ $namespace }}
         stringData:
           kas_shared_secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.gitlab_kas.api_secret_key") | quote }}
-
       - apiVersion: v1
         kind: Secret
         metadata:
@@ -262,3 +261,13 @@ releases:
           namespace: {{ $namespace }}
         stringData:
           shared_secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-pages\".api_secret_key") | quote }}
+{{ if .Values | getOrNil "gitlab_runner.enabled" | default false }}
+      - apiVersion: v1
+        kind: Secret
+        metadata:
+          name: gitlab-runner-registration-credential-v1
+          namespace: {{ $namespace }}
+        stringData:
+          runner-registration-token: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".gitlab_k8s[\"gitlab-runner-registration-credential\"]") | quote }}
+          runner-token: ""
+{{ end }}
