Fixes the location of where the secret is located for the runner
* Creates a new attribute to globally define where the secret will live
  that can be set where the gitlab-runner is configured
* This fixes the current situation where preprod is uanble to start up
  the runner as the secret is currently located in the gitlab namespace

--- a/releases/gitlab-runner/helmfile.yaml
+++ b/releases/gitlab-runner/helmfile.yaml
@@ -11,7 +11,7 @@ repositories:
 releases:
 - name:  gitlab-runner
   chart: "gitlab-runner/gitlab-runner"
-  namespace: gitlab-runner
+  namespace: {{ .Values | getOrNil "gitlab_runner.namespace" | default "gitlab-runner" }}
   version: "0.27.0"
   installed: {{ .Values | getOrNil "gitlab_runner.enabled" | default "false" }}
   values:
