--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -76,6 +76,7 @@ environments:
           domain: kas.pre.gitlab.com
         gitlab_runner:
           enabled: true
+          namespace: gitlab-runner
 
   gstg:
     values:
