--- a/releases/gitlab-runner/helmfile.yaml
+++ b/releases/gitlab-runner/helmfile.yaml
@@ -4,15 +4,16 @@ bases:
   - "../../bases/environments.yaml"
 
 ---
+{{- $runner_chart_version := "0.27.0" }}
 repositories:
 - name: "gitlab-runner"
-  url: "https://charts.gitlab.io"
+  url: git+ssh://git@dev.gitlab.org/gitlab/charts/gitlab-runner.git@?ref=v{{ $runner_chart_version }}&sparse=0
 
 releases:
 - name:  gitlab-runner
   chart: "gitlab-runner/gitlab-runner"
   namespace: {{ .Values | getOrNil "gitlab_runner.namespace" | default "gitlab-runner" }}
-  version: "0.27.0"
+  version: "{{ $runner_chart_version }}"
   installed: {{ .Values | getOrNil "gitlab_runner.enabled" | default "false" }}
   values:
     - values.yaml.gotmpl
