--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -24,7 +24,7 @@ environments:
           kas:
             enabled: true
         gitlab_extras:
-          consul_headless: true
+          consul_nodeport: true
       # These services are only installed in the
       # regional cluster, so we disable them for
       # all zonal clusters, regardless of the environment.
@@ -44,7 +44,7 @@ environments:
             enabled: false
         gitlab_extras:
           api_no_proxy: true
-          consul_headless: true
+          consul_nodeport: true
 
   ops:
     values:
@@ -158,7 +158,7 @@ environments:
             enabled: false
         gitlab_extras:
           api_no_proxy: true
-          consul_headless: false
+          consul_nodeport: false
           namespace: "gitlab-cny"
 
   gprd:
