--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -80,6 +80,7 @@ environments:
           namespace: gitlab-runner
         gitlab_extras:
           api_no_proxy: true
+          consul_nodeport: false
 
   gstg:
     values:
