--- a/ci/cluster-init-before-script.yml
+++ b/ci/cluster-init-before-script.yml
@@ -22,7 +22,7 @@
     - chmod 400 "$SSH_PRIVATE_KEY"
     - export GIT_SSH_COMMAND="ssh -i $SSH_PRIVATE_KEY -o IdentitiesOnly=yes -o GlobalKnownHostsFile=$SSH_KNOWN_HOSTS"
     - |
-      if [[ $USE_ARTIFACT == "true" ]] && [[ -f "./gitlab-0.0.0+$CHART_VERSION.tgz" ]]; then
+      if [[ -f "./gitlab-0.0.0+$CHART_VERSION.tgz" ]]; then
         export ARTIFACT_AVAILABLE=true
         echo "Using chart from artifact"
         tar xf gitlab-0.0.0+$CHART_VERSION.tgz
