--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -86,6 +86,7 @@ environments:
         google_project: "gitlab-staging-1"
         gitlab_domain: "staging.gitlab.com"
         gitlab_endpoint: "https://staging.gitlab.com"
+        gitlab_internal_lb_dns_address: "int.gstg.gitlab.net"
         registry_deployment_for_image_tag: "gitlab-registry"
         registry_api_host: "registry.staging.gitlab.com"
         cluster: gstg-gitlab-gke
