Disable helm `wait` and `atomic` settings
Part of https://gitlab.com/gitlab-com/gl-infra/production/-/issues/4940

Currently our CI jobs in this repository keep getting stuck due to helm
"waiting" for all deployments to have healthy pods equal to the proposed number
by the replicaset/HPA. This all changes, even if you aren't changing a deployment
that is broken. E.g. you make a change to registry, however webservice-api is failing
to scale, so helm times out, rolls back, and doesn't allow you to change anything.

For the moment we need to get changes out in order to eventually fix and unblock things,
so lets remove helms wait and atomic logic. Kubernetes will make sure we don't take all
our pods offline with a bad change, and this will allow us to not wrestle with helm.

We can roll this change back after things are all working again.

--- a/bases/helmDefaults.yaml
+++ b/bases/helmDefaults.yaml
@@ -1,10 +1,10 @@
 ---
 helmDefaults:
-  atomic: true
+  atomic: false
   tillerNamespace: kube-system
   tillerless: true
   cleanupOnFail: false
-  wait: true
+  wait: false
   timeout: 3600
   # Do not recreate pods during upgrade when not required
   recreatePods: false
