Revert "Disable helm `wait` and `atomic` settings"
This reverts commit b7d15575394f1bf0bca5f598c126d88874ba6bac.

Now that we should no longer be in a situation of pods stuck in pending
state, which stops helm from completing (and forcing it to rollback),
we want to go back to the behaviour we had previously just for consistency.

--- a/bases/helmDefaults.yaml
+++ b/bases/helmDefaults.yaml
@@ -1,10 +1,10 @@
 ---
 helmDefaults:
-  atomic: false
+  atomic: true
   tillerNamespace: kube-system
   tillerless: true
   cleanupOnFail: false
-  wait: false
+  wait: true
   timeout: 3600
   # Do not recreate pods during upgrade when not required
   recreatePods: false
