Add kas private api secret
Part of https://gitlab.com/gitlab-com/gl-infra/infrastructure/-/issues/13735

corrective action for https://gitlab.com/gitlab-com/gl-infra/production/-/issues/5107

This adds a new secret in use by kas. Value already in chef.

We also configure kas to use our new secret.

--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -267,6 +267,13 @@ releases:
       - apiVersion: v1
         kind: Secret
         metadata:
+          name: gitlab-kas-private-api-credential-v1
+          namespace: {{ $namespace }}
+        stringData:
+          kas_private_api_secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".gitlab_k8s[\"kas_private_api_secret\"]") | quote }}
+      - apiVersion: v1
+        kind: Secret
+        metadata:
           name: gitlab-pages-api-credential-v1
           namespace: {{ $namespace }}
         stringData:
