Enable web pods in `gstg`

--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -80,6 +80,8 @@ environments:
         gitlab_extras:
           api_no_proxy: true
           ingress_readiness: true
+        web:
+          enabled: true
 
   gstg:
     values:
@@ -98,7 +100,8 @@ environments:
           managed_cert_name: kas-staging-gitlab-com
           domain: kas.staging.gitlab.com
           frontendconfigEnable: true
-
+        web:
+          enabled: true
 
   # Zonal clusters for gstg, these three environments
   # inherit from the gstg environemnt, which is the
