Remove the inmemory cache config for Container Registry in Preprod
* We do this via creating a new secret that is missing the cache
  configuration block
* We apply this only to preprod, though the secret will be created for
  all clusters/all environments
* After the testing is completed in preprod, we'll likely switch this
  over in all other environments over time
* After we've flipped to the new secret everywhere, we can remove the
  older secret

--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -165,6 +165,27 @@ releases:
               enabled: true
           gcs.json: |
 {{ $gkms_omnibus_secrets | exec "jq" (list "-r" ".\"gitlab-server\".\"google-creds\".json_base64") | b64dec | trimSuffix "\n" | indent 14 }}
+
+      # Creates the second version of the registry secret
+      #   - Removes the inmemory cache configuration
+      - apiVersion: v1
+        kind: Secret
+        metadata:
+          name: registry-storage-v2
+          namespace: {{ $namespace }}
+        stringData:
+          config: |
+            gcs:
+              bucket: {{ .Environment.Values | getOrNil "registry_bucket_name" | default (printf "gitlab-%s-registry" $env_prefix) }}
+              keyfile: /etc/docker/registry/storage/gcs.json
+            maintenance:
+              uploadpurging:
+                enabled: false
+            delete:
+              enabled: true
+          gcs.json: |
+{{ $gkms_omnibus_secrets | exec "jq" (list "-r" ".\"gitlab-server\".\"google-creds\".json_base64") | b64dec | trimSuffix "\n" | indent 14 }}
+
 # only add this secret to pre environment for the moment:
 {{ if eq (.Environment.Values | getOrNil "env_prefix") "pre" }}
       - apiVersion: v1
