Adds the web deployment to Production's Canary stage

--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -164,6 +164,8 @@ environments:
           api_no_proxy: true
           ingress_readiness: true
           namespace: "gitlab-cny"
+        web:
+          enabled: true
 
   gprd:
     values:
