Remove the EXPEDITE_DEPLOYMENT variable automatically
* In case of emergency situations can be stressful situations, let's
  remove this variable to ensure that we don't accidentally forget about
  it in the future
* We create a job dedicated to this task that runs only if the variable
  is set
  * Other rules are put into place to prevent other mistakes
* Documentation created to reflect this automation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -199,6 +199,7 @@ stages:
   - gprd-cny:deploy
   - gprd:deploy:alpha
   - gprd:deploy:beta
+  - cleanup
 
 build-chart:
   image: "${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}"
@@ -825,3 +826,19 @@ gprd-us-east1-d:auto-deploy:
   only:
     variables:
       - $ENVIRONMENT == "gprd" && $DRY_RUN == "false" && $AUTO_DEPLOY == "true"
+
+###############################################################################
+# Clean up
+#   * These jobs run cleanup related tasks
+###############################################################################
+
+remove-expedite-variable:
+  stage: cleanup
+  script:
+    - "curl --fail --header \"PRIVATE-TOKEN: ${OPS_API_TOKEN}\" -X DELETE \"${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/variables/EXPEDITE_DEPLOYMENT\""
+  rules:
+    - if: '$CI_API_V4_URL == "https://gitlab.com/api/v4"'
+      when: never
+    - if: '$AUTO_DEPLOY == "true"'
+      when: never
+    - if: '($CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH) && $EXPEDITE_DEPLOYMENT'
